# SuperTrack

./: .gitignore  CMakeLists.txt  README.md  SuperTrack.cu  superimpose_tracks.cu
include/: CPUSuperimpose.hh  CubStorageBuffer.cuh  GPUSuperimpose.cuh  Histogram.cuh  SimulationMethod.hh  SuperTrackManager.hh  SuperTrackTypes.cuh  ThreadAllocation.hh  ThreadAllocator.hh  ThreadTask.hh  Track.cuh  VolumeEdepPair.cuh  VoxelConstrainedSphereMethod.hh  testCUDA.cuh  utils.hh
include/Data_output/: Histogram.cuh
include/GPU_helper_types/: CubAddOperator.cuh  CubStorageBuffer.cuh  Track.cuh
include/Simulation_method/: SimulationMethod.hh  SimulationMethodFactory.hh
include/Simulation_method/VoxelConstrainedSphereMethod/: SphericalGeometry.cuh  VoxelConstrainedSphereMethod.hh
include/Thread_allocation/: ThreadAllocator.hh
macros/: default.ini  proton_10.0MeV_5e3nm_diameter_x1_oversamples.ini  proton_50.0MeV_5e3nm_diameter_x1_oversamples.ini  proton_80.0MeV_5e3nm_diameter_x1_oversamples.ini  test.ini
runTools/: SuperTrack_runTools.py
runTools/data/: current_template.p
runTools/src/: configure_series.py  configure_single.py  templates.py
runTools/templates/: seadragon_short.txt
src/: CPUSuperimpose.cc  CubStorageBuffer.cu  GPUSuperimpose.cu  Histogram.cu  SimulationMethod.cu  SuperTrackManager.cu  ThreadAllocation.cc  ThreadAllocator.cc  ThreadTask.cc  Track.cu  VoxelConstrainedSphereMethod.cu  testCUDA.cu  utils.cc
src/Data_output/: Histogram.cu
src/GPU_helper_types/: CubStorageBuffer.cu  Track.cu  VolumeEdepPair.cu
src/Simulation_method/: SimulationMethod.cu  SimulationMethodFactory.cu
src/Simulation_method/VoxelConstrainedSphereMethod/: SphericalGeometry.cu  VoxelConstrainedSphereMethod.cu  VoxelConstrainedSphereMethod.md  readme.md
src/Thread_allocation/: ThreadAllocation.cc  ThreadAllocator.cc
src/debug/: debug.cu
tst/: CMakeLists.txt  main.cu  readme.md  runTestsSeparate.sh
tst/include/: HistogramTest.hh
tst/testMacros/: testA1.ini  testA2.ini  testA3.ini  testA4.ini  testA5.ini  testA6.ini  testA7.ini  testA8.ini
tst/testOutput/: test_A11234.root
tst/testTracks/: tstTrackGenerator.cc
tst/testTracks/testA1/: tstTrack1ev1um.root
tst/tests/: HistogramTests.cu  SuperTrackVoxelConstrainedTests.cu
tst/tstTrackGenerator/: tstTrack1ev1um.root  tstTrackGenerator.rmacro
